Simplified file reading in test package